# bibliotheca

./: .dockerignore  .env  .env.mongo  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  docker-compose-dev.yml  docker-compose.yml
src/: book.rs  comment.rs  genre.rs  lib.rs  main.rs  mongo.rs  user.rs
