[package]
name = "bibliotheca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1.0", features = ["derive"] } #Used in the Map Data into Structs section
rocket = { version = "=0.5.0-rc.3", features = ["json"] } # Used for the REST API